feat: add clinic creation route
